<resources>
    <string name="app_name">Anvie</string>
    <string name="title_Homepage">Homepage</string>
    <string name="title_my_movie">My Movie</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="available">Available</string>
    <string name="out_of_stock">Out of Stock</string>
    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(Max)</item>
    </string-array>
    <string name="Homepage">Homepage</string>
    <string name="description">Description</string>
    <string name="checkout">Checkout</string>
    <string name="total_price_26">Total price : $ 26</string>
    <string name="find_your_movie">Find your Movie!</string>
    <string name="qty">Qty</string>
    <string name="see_my_movie">See My Movie</string>
    <string name="product_detail">Product Detail</string>
    <string name="cart">Cart</string>
    <string name="order">Order</string>
    <string name="my_movie">My Movie</string>
    <string name="thanks_for_your_order">Thanks for your order.</string>
    <string name="review">Review</string>
    <string name="add_review">Add Review</string>
    <string name="play">Play</string>
    <string name="see_trailer">See Trailer</string>
    <string name="movie_name">Movie Name</string>
    <string name="ratingscore">RatingScore</string>
    <string name="recommended_movie">Recommended movie :</string>
    <string name="recommended">Recommended</string>
    <string name="not_recommended">Not Recommended</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <string name="movie_category">Movie Category</string>
    <string name="add_category_review">Add Category Review</string>
    <string name="create_movie_category_review">Create Movie Category Review</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
    <string name="see_ringtone">See Ringtone</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="start_ringtone">Start Ringtone</string>
    <string name="stop_ringtone">Stop Ringtone</string>
    <string name="let_s_try_the_ringtone">Let\'s try the ringtone!</string>
    <string name="add_the_review">Add the review!</string>
    <string name="random_number">Random Number</string>
</resources>