<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.ac.ui.cs.mobileprogramming.shafira_ishlah.anvie.views.SeeRingtoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_try_the_ringtone"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:layout_marginBottom="100dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary">
        </TextView>

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_weight="1"
            android:text="@string/start_ringtone" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_weight="1"
            android:text="@string/stop_ringtone" />

    </LinearLayout>

</RelativeLayout>