<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/shopFragment">

    <fragment
        android:id="@+id/shopFragment"
        android:name="id.ac.ui.cs.mobileprogramming.shafira_ishlah.anvie.views.ShopFragment"
        android:label="Anvie"
        tools:layout="@layout/fragment_shop">
        <action
            android:id="@+id/action_shopFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_shopFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_shopFragment_to_reviewFragment"
            app:destination="@id/ReviewFragment" />
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="id.ac.ui.cs.mobileprogramming.shafira_ishlah.anvie.views.ProductDetailFragment"
        android:label="@string/product_detail"
        tools:layout="@layout/fragment_product_detail">
        <action
            android:id="@+id/action_productDetailFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="id.ac.ui.cs.mobileprogramming.shafira_ishlah.anvie.views.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cartFragment_to_orderFragment"
            app:destination="@id/orderFragment"
            app:popUpTo="@id/shopFragment" />
    </fragment>

    <fragment
        android:id="@+id/orderFragment"
        android:name="id.ac.ui.cs.mobileprogramming.shafira_ishlah.anvie.views.OrderFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_order" >
        <action
            android:id="@+id/action_orderFragment_to_shopFragment"
            app:destination="@id/shopFragment" />
    </fragment>

    <fragment
        android:id="@+id/ReviewFragment"
        android:name="id.ac.ui.cs.mobileprogramming.shafira_ishlah.anvie.views.ReviewFragment"
        android:label="Review"
        tools:layout="@layout/fragment_review" >
    </fragment>



</navigation>